--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_table">TableActivity</string>
+
+    <string name="facebook_app_id">2095893563754119</string>
+    <string name="fb_login_protocol_scheme">fb2095893563754119</string>
+
 </resources>
