--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,6 @@
 
     <string name="facebook_app_id">2095893563754119</string>
     <string name="fb_login_protocol_scheme">fb2095893563754119</string>
+    <string name="title_activity_maps">Map</string>
 
 </resources>
